# swift

./: Coordinate_Map_Construction.cpp  Makefile  README_QC.md  READ_QC.md  debugswifttile  new_runswift.sh  runswifttile  script.sh  swift_main.cpp
Arthur/: CMakeCache.txt  CMakeLists.txt  Cluster_Coordinate_Construction  Makefile  Sequence_Scores_Heatmap_new_4_channel_data_test.tif  Sequence_Scores_Heatmap_test-run.tif  cmake_install.cmake  get_called_barcode_map.cpp  get_pre_barcode_calling_heatmap  get_pre_barcode_calling_heatmap.cpp  get_sequence_scores_heatmap  get_sequence_scores_heatmap.cpp  image_add.py  make_sequence_combo.sh  mismatch_processor.py  qc_map.py  qc_map.tif
Arthur/heatmap_reference/: Heatmap_reference_updated_new_4_channel_FOV_0.txt  Heatmap_reference_updated_new_4_channel_FOV_1.txt  Heatmap_reference_updated_new_4_channel_FOV_10.txt  Heatmap_reference_updated_new_4_channel_FOV_11.txt  Heatmap_reference_updated_new_4_channel_FOV_12.txt  Heatmap_reference_updated_new_4_channel_FOV_13.txt  Heatmap_reference_updated_new_4_channel_FOV_14.txt  Heatmap_reference_updated_new_4_channel_FOV_15.txt  Heatmap_reference_updated_new_4_channel_FOV_16.txt  Heatmap_reference_updated_new_4_channel_FOV_17.txt  Heatmap_reference_updated_new_4_channel_FOV_18.txt  Heatmap_reference_updated_new_4_channel_FOV_2.txt  Heatmap_reference_updated_new_4_channel_FOV_20.txt  Heatmap_reference_updated_new_4_channel_FOV_21.txt  Heatmap_reference_updated_new_4_channel_FOV_3.txt  Heatmap_reference_updated_new_4_channel_FOV_4.txt  Heatmap_reference_updated_new_4_channel_FOV_5.txt  (+3 more)
(+18 files in other folders)
