cmake_minimum_required(VERSION 2.8)
project( Cluster_Coordiante_Construction )
set(CMAKE_CXX_FLAGS "-std=c++11 -g -Og")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(  get_sequence_scores_heatmap get_sequence_scores_heatmap.cpp )
add_executable(  get_pre_barcode_calling_heatmap get_pre_barcode_calling_heatmap.cpp)
target_link_libraries( get_sequence_scores_heatmap ${OpenCV_LIBS} )
target_link_libraries(  get_pre_barcode_calling_heatmap ${OpenCV_LIBS} )
